# topaz-tak

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
src/: bitboard.rs  board.rs  eval.rs  lib.rs  main.rs  move_gen.rs  proof.rs  search.rs  topaz.rs  transposition_table.rs
src/board/: bitboard.rs  piece.rs  stack.rs  zobrist.rs  zobrist.table
src/eval/: classic.table  classic_junk.table  conv.table  data.mat  incremental.rs  nn.rs  smooth.rs  smooth_weights.table  stack_lookup.table  vals_small.txt
src/move_gen/: magic.rs  move_order.rs  ptn.rs
src/search/: book.rs  proof.rs  util.rs
