[package]
name = "topaz-tak"
version = "0.1.0"
authors = ["Justin Kur <Justink97@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
board-game-traits = "0.2.1"
rand_core = "0.6.3"
rand_xoshiro = "0.6.0"
crossbeam-channel = "0.5"
lru = "0.7.0"
termtree = "0.2.3"
colorful = "0.2"
getopts = "0.2.21"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "topaz"
path = "src/topaz.rs"

[[bench]]
name = "benchmark"
harness = false
