[package]
name = "topaz-tak"
version = "0.1.0"
authors = ["Justin Kur <Justink97@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["random", "cli"]
cli = ["termtree", "colorful", "getopts", "telnet", "dotenv"]
random = ["rand_core", "rand_xoshiro", "getrandom"]

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
cfg-if = "1.0.0"
instant = "0.1.12"
rand_core = {version = "0.6.3", optional = true}
rand_xoshiro = {version = "0.6.0", optional = true}
getrandom = {version = "*", optional = true}
termtree = {version = "0.2.3", optional = true}
colorful = {version = "0.2", optional = true}
getopts = {version = "0.2.21", optional = true}
telnet = {version = "0.2", optional = true}
dotenv = {version = "0.15.0", optional = true}
miniserde = "0.1.24"

[profile.release]
debug = true
lto = true

[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "topaz"
path = "src/topaz.rs"
required-features = ["cli"]

[[bench]]
name = "benchmark"
harness = false
